KAFKA-17759 Remove Utils.mkMap and Utils.mkEntry